--- a/client/src/app/components/form/weekly-availability/weekly-availability.component.html
+++ b/client/src/app/components/form/weekly-availability/weekly-availability.component.html
@@ -26,9 +26,9 @@
                 <div *ngFor="let range of availability[day].timeRanges; let i = index"
                     class="flex flex-col sm:flex-row items-start sm:items-center gap-3">
 
-                    <!-- Start Time -->
+                    <!-- From Time -->
                     <div class="flex items-center gap-2">
-                        <label class="text-sm text-gray-600 dark:text-gray-400 min-w-[40px]">Start:</label>
+                        <label class="text-sm text-gray-600 dark:text-gray-400 min-w-[40px]">From:</label>
                         <input
                             class="px-3 py-2 border border-gray-300 dark:border-gray-600 rounded-md focus:ring-2 focus:ring-blue-500 focus:outline-none dark:bg-gray-800 dark:text-gray-200 cursor-pointer"
                             [ngxTimepicker]="startPicker" [(ngModel)]="availability[day].timeRanges[i].start"
@@ -36,9 +36,9 @@
                         <ngx-material-timepicker #startPicker [format]="12"></ngx-material-timepicker>
                     </div>
 
-                    <!-- End Time -->
+                    <!-- To Time -->
                     <div class="flex items-center gap-2">
-                        <label class="text-sm text-gray-600 dark:text-gray-400 min-w-[35px]">End:</label>
+                        <label class="text-sm text-gray-600 dark:text-gray-400 min-w-[25px]">To:</label>
                         <input
                             class="px-3 py-2 border border-gray-300 dark:border-gray-600 rounded-md focus:ring-2 focus:ring-blue-500 focus:outline-none dark:bg-gray-800 dark:text-gray-200 cursor-pointer"
                             [ngxTimepicker]="endPicker" [(ngModel)]="availability[day].timeRanges[i].end"
@@ -46,18 +46,28 @@
                         <ngx-material-timepicker #endPicker [format]="12"></ngx-material-timepicker>
                     </div>
 
-                    <!-- Remove button (only if more than 1 range) -->
+                    <!-- Remove button with trash icon (only if more than 1 range) -->
                     <button *ngIf="availability[day].timeRanges.length > 1" type="button"
                         (click)="removeTimeRange(day, i)"
-                        class="inline-flex items-center gap-1 px-4 py-2 bg-red-600 text-white text-sm font-medium rounded-md hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-red-500 focus:ring-offset-2 transition-all duration-200 shadow-sm">
-                        <span>Remove</span>
+                        class="inline-flex items-center justify-center w-10 h-10 bg-red-600 text-white rounded-md hover:bg-red-700 shadow-sm"
+                        title="Remove time range">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+                            <path fill-rule="evenodd"
+                                d="M9 2a1 1 0 00-.894.553L7.382 4H4a1 1 0 000 2v10a2 2 0 002 2h8a2 2 0 002-2V6a1 1 0 100-2h-3.382l-.724-1.447A1 1 0 0011 2H9zM7 8a1 1 0 012 0v6a1 1 0 11-2 0V8zm5-1a1 1 0 00-1 1v6a1 1 0 102 0V8a1 1 0 00-1-1z"
+                                clip-rule="evenodd" />
+                        </svg>
                     </button>
                 </div>
 
-                <!-- Add more button -->
+                <!-- Add button with + icon (green) -->
                 <button type="button" (click)="addTimeRange(day)"
-                    class="inline-flex items-center gap-1 px-4 py-2 bg-blue-600 text-white text-sm font-medium rounded-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 transition-all duration-200 shadow-sm">
-                    <span>Add Time Range</span>
+                    class="inline-flex items-center justify-center w-10 h-10 bg-green-600 text-white rounded-md hover:bg-green-700 shadow-sm"
+                    title="Add time range">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 20 20" fill="currentColor">
+                        <path fill-rule="evenodd"
+                            d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z"
+                            clip-rule="evenodd" />
+                    </svg>
                 </button>
             </div>
 
@@ -67,11 +77,11 @@
     <!-- Buttons -->
     <div class="flex flex-col sm:flex-row sm:justify-end gap-2 mt-4">
         <button type="button" (click)="selectAll()"
-            class="w-full sm:w-auto px-4 py-2 bg-blue-600 text-white font-medium rounded-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 transition-all duration-200 shadow-sm">
+            class="w-full sm:w-auto px-4 py-2 bg-blue-600 text-white font-medium rounded-md hover:bg-blue-700 shadow-sm">
             Select All Days
         </button>
         <button type="button" (click)="clearAll()"
-            class="w-full sm:w-auto px-4 py-2 bg-gray-600 text-white font-medium rounded-md hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-gray-500 focus:ring-offset-2 transition-all duration-200 shadow-sm">
+            class="w-full sm:w-auto px-4 py-2 bg-gray-600 text-white font-medium rounded-md hover:bg-gray-700 shadow-sm">
             Clear All
         </button>
     </div>
