--- a/client/src/app/components/button/button.component.html
+++ b/client/src/app/components/button/button.component.html
@@ -9,8 +9,10 @@
     'bg-transparent text-primary-600 underline hover:text-primary-800 dark:text-primary-400 dark:hover:text-primary-200': type === 'link' && !disabled,
     'bg-gray-100 text-gray-400 border border-gray-300 cursor-not-allowed opacity-60 dark:bg-gray-800 dark:text-gray-500 dark:border-gray-700': disabled
   }" [disabled]="disabled || loading"
-  [class]="'inline-flex items-center justify-center gap-2 rounded-md font-semibold text-center transition focus:outline-none ' + sizeClass + (fullWidth ? ' w-full' : '') + (customClass ? ' ' + customClass : '')">
-  <ng-content select="[icon]"></ng-content>
+  [class]="'inline-flex items-center justify-center rounded-md font-semibold text-center transition focus:outline-none ' + (iconOnly ? 'gap-0 p-0' : (showIconSlot ? 'gap-2 ' : 'gap-0 ') + sizeClass) + (fullWidth ? ' w-full' : '') + (customClass ? ' ' + customClass : '')">
+  <span *ngIf="showIconSlot" class="inline-flex items-center justify-center leading-none">
+    <ng-content select="[icon]"></ng-content>
+  </span>
   <span *ngIf="!loading">{{ label }}</span>
   <span *ngIf="loading">Loading...</span>
 </button>
